syntax = "proto3";

package project;

option go_package = "github.com/huynhthanhthao/hrm/proto/project;project";

service ProjectService {
  rpc CreateProject (CreateProjectRequest) returns (CreateProjectResponse);
  rpc GetProject (GetProjectRequest) returns (GetProjectResponse);
}

message CreateProjectRequest {
  string name = 1;
  string description = 2;
}

message CreateProjectResponse {
  string id = 1;
  string name = 2;
  string description = 3;
}

message GetProjectRequest {
  string id = 1;
}

message GetProjectResponse {
  string id = 1;
  string name = 2;
  string description = 3;
}